<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EuRECa</string>
    <string name="admin_name">EuRECa Admin</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="share">Share</string>
    <string name="settings_tab">SETTINGS</string>
    <string name="home_tab">HOME</string>
    <string name="upload_tab">UPLOAD</string>
    <string name="reverseColor">Reverse Colors</string>
    <string name="apply">Apply</string>
    <string name="app_restart">(App will restart)</string>
    <string name="preference_file_key" translatable="false">com.eurecalab.eureca.PREFERENCE_FILE_KEY</string>
    <string name="saved_color">Saved Color</string>
    <string name="saved_reverse">Saved Reverse</string>
    <string name="color">Color</string>
    <string name="download_error">An error has occurred</string>
    <string name="name">Name: </string>
    <string name="category">Category: </string>
    <string name="tags">Tags: </string>
    <string name="file">File: </string>
    <string name="choose">Choose</string>
    <string name="save">Save</string>
    <string name="tags_hint">whitespace separated</string>
    <string name="downloading">Downloading…</string>
    <string name="updating">Updating…</string>
    <string name="signing">Signing In</string>
    <string name="signed_out">Signed Out</string>
    <string name="check_name">A recording with this name already exists</string>
    <string name="check_file">The selected file is too big</string>
    <string name="upload_ok">Uploaded successfully</string>
    <string name="aws_pool_id" translatable="false">eu-west-1:42a2f494-baf3-449f-8881-7e79746ee2bd</string>
    <string name="s3_bucket_name" translatable="false">arandroid.sharesoundz</string>
    <string name="select_folder">Select Folder</string>
    <string name="current_folder">Current Folder</string>
    <string name="sign_out">Sign Out</string>
    <string name="theme">Theme</string>
    <string name="account" translatable="false">Account</string>
    <string name="app_license">App License:</string>
    <string name="upgrade">Upgrade</string>
    <string name="expires_in">(expires in</string>
    <string name="pro_version" translatable="false">Premium</string>
    <string name="free_version">Basic</string>
    <string name="days">days)</string>
    <string name="day">day)</string>
    <string name="functionality_available_in_pro">This feature is only available with Premium license</string>
    <string name="extend">Extend</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="are_you_sure">Do you really want to delete this recording?</string>
    <string name="yes">Yes</string>
    <string name="no" translatable="false">No</string>
    <string name="uploading">Uploading…</string>
    <string name="deleting">Deleting…</string>
    <string name="select_a_file">Select a file</string>
    <string name="parent_directory">…Parent Directory</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="empty_name">The name is required</string>
    <string name="charts_tab">CHARTS</string>
    <string name="most_shared">The Most Shared</string>
    <string name="loading">Loading…</string>
    <string name="admin_tab">ADMIN</string>
    <string name="item_already_purchased">Item already purchased</string>
    <string name="unable_to_login">Unable to login</string>
    <string name="now_premium_user">Congratulation! You\'re now a premium user!</string>
    <string name="purchase_failed">Purchase failed</string>
    <string name="network_not_available">Network not available</string>
    <string name="connecting_using_stored_credentials">Connecting using stored credentials</string>
</resources>
